// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Control expect to render correctly with refine on map move 1`] = `
<div
  className="ais-GeoSearch-control"
>
  <label
    className="ais-GeoSearch-label"
  >
    <input
      checked={true}
      className="ais-GeoSearch-input"
      onChange={[Function]}
      type="checkbox"
    />
    control
  </label>
</div>
`;

exports[`Control expect to render correctly without refine on map move 1`] = `
<div
  className="ais-GeoSearch-control"
>
  <label
    className="ais-GeoSearch-label"
  >
    <input
      checked={false}
      className="ais-GeoSearch-input"
      onChange={[Function]}
      type="checkbox"
    />
    control
  </label>
</div>
`;

exports[`Control expect to render correctly without refine on map move when the map has moved 1`] = `
<div
  className="ais-GeoSearch-control"
>
  <button
    className="ais-GeoSearch-redo"
    onClick={[Function]}
  >
    redo
  </button>
</div>
`;
